--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -1878,6 +1878,7 @@
   "description.tomato.bombard.boost": "+1 Помидор",
   "description.tomato.clown.boost": "-50% времени роста у Томатов",
   "description.toolshed": "Увеличь свой запас инструментов на 50%",
+  "description.tornadoPinwheel": "Волшебный ветряк, защищает вас от торнадо! Только для одноразового использования.",
   "description.tough.tree": "Шанс получить 3x Дерева",
   "description.town.center": "Пройдись по центру города, если хочешь узнать последние новости",
   "description.town.sign": "С гордостью показывает номер твоей фермы!",
@@ -2364,6 +2365,7 @@
   "flowerBedContent.select.seed": "Выбери семя",
   "flowerBedGuide.beeSwarmsBoost": "Пчелиные рои дают +0.2 урожая любым посевам.",
   "flowerBedGuide.beesProduceHoney": "Пчелы производят мед во время роста цветов.",
+  "flowerBedGuide.buySeeds": "Покупай семена в магазине семян.",
   "flowerBedGuide.collectAllSpecies": "Собери все виды цветов в кодексе!",
   "flowerBedGuide.crossbreedWithCrops": "Скрещивай с урожаем и другими цветами, чтобы открыть новые виды цветов.",
   "flowerBedGuide.fillUpBeehive": "Если собрать мед с заполненного улья, то появится шанс на пчелиный рой.",
@@ -2429,6 +2431,10 @@
   "gameOptions.generalSettings.lightMode": "Светлый режим",
   "gameOptions.generalSettings.share": "Поделиться",
   "gameOptions.logout": "Выход из аккаунта",
+  "gameOptions.notifications": "Уведомления",
+  "gameOptions.notifications.update": "Обновить настройки",
+  "gameOptions.notifications.updated": "Настройки обновлены",
+  "gameOptions.notifications.updating": "Обновление настроек",
   "gameOptions.plazaSettings": "Настройки Плазы",
   "gameOptions.plazaSettings.changeServer": "Сменить сервер",
   "gameOptions.plazaSettings.keybinds.description": "Хотите узнать, какие сочетания клавиш доступны? Проверьте их здесь.",
@@ -2533,6 +2539,7 @@
   "guide.factionPet.one": "Каждую неделю питомец будет просить 3 разных вида еды. При кормежке, опыт будет идти в общий счет фракции.",
   "guide.factionPet.six": "За каждую доставленную еду вы будете получать баллы. Каждый раз, когда вы доставляете товар, вознаграждение будет уменьшаться. Эти награды будут обновляться ежедневно. Игроки, получившие бонус в виде эмблемы, получат дополнительный бонус в зависимости от бонусного ранга фракции.",
   "guide.factionPet.three": "Если фракция не достигнет цели, питомец проспит целую неделю.",
+  "guide.factionPet.two": "У вашей фракции будет цель опыта, которую нужно достичь каждую неделю. Если фракция достигнет цели, то цель следующей недели будет на 25% больше, чем цель предыдущей недели! Если цель не будет достигнута, она будет сброшена до 1000 умноженное на кол-во членов фракции.",
   "guide.intro": "От скромных начинаний до экспертного фермерства, этот гайд ответит на все твои вопросы!",
   "guide.streak.beyond": "После 8-й недели питомец должен быть сытым каждую неделю, чтобы сохранить бонус.",
   "guide.streak.four": "Если животное живо на 8 неделю, то все, кто его кормил, на 7 неделе получат бонус в 50% опыта в течение 8 недели и далее*",
@@ -2902,7 +2909,7 @@
   "marketplace.cosmeticsDescription": "Украсьте свою ферму редкими предметами",
   "marketplace.currentPrice": "Текущая цена",
   "marketplace.description": "Описание",
-  "marketplace.estimated.price": "*Ориентировочная цена USD/SFL",
+  "marketplace.estimated.price": "*Ориентировочная цена SFL|USD",
   "marketplace.expiry": "Действительно до",
   "marketplace.from": "От",
   "marketplace.hoarding": "Требуется прогресс магазина",
@@ -4062,6 +4069,7 @@
   "scavenger.guide.two": "Еще одна возможность это сбор диких или магических грибов, которые спонтанно появляются на твоей ферме и близлежащих островах. Эти грибы можно собирать бесплатно и использовать в рецептах, квестах и крафте. Следи за грибами, так как максимальное количество грибов на твоей ферме не должно превышать 5 штук для диких грибов и 3 штук для магических. Если на ферме нет места, грибы появятся на соседних островах, чтобы ты не упустил эти ценные ресурсы.",
   "sceneDialogues.chefIsBusy": "Шеф занят",
   "search": "Поиск",
+  "searchHere": "Ищите здесь...",
   "searching": "Ищем",
   "season.access": "У тебя есть доступ к",
   "season.banner": "Сезонный баннер",
@@ -4165,6 +4173,7 @@
   "skill.claimed": "Заявлено",
   "skill.cluckyGrazing.buff": "-25% корма для кормления цыплят",
   "skill.cluckyGrazing.debuff": "+50% корма для других животных",
+  "skill.coinSwindler": "+10% монет при продаже урожая в магазин",
   "skill.compostingBonanza.buff": "Ускорьте компостеры еще на час при прокачке",
   "skill.compostingBonanza.debuff": "В 2 раза больше ресурсов для улучшения компостеров",
   "skill.compostingOverhaul.buff": "+2 Вормс",
@@ -4447,6 +4456,9 @@
   "temperateSeason.possibleEvents": "Возможные события",
   "temperateSeason.seasonDetails": "Сведения о сезоне",
   "temperateSeason.seasonalCrops": "Сезонные культуры",
+  "temperateSeason.weatherShop.buy.comingSoon": "Скоро — 1 февраля",
+  "temperateSeason.weatherShop.buy.description": "Покупайте предметы, чтобы защитить свою ферму от непогоды",
+  "temperateSeason.weatherShop.weather": "Погода",
   "test": "Тест",
   "thank.you": "Спасибо!",
   "tieBreaker.betterLuck": "Время съесть еще тортов! В следующий раз повезет больше.",
@@ -4487,6 +4499,17 @@
   "time.secs.med": "сек",
   "timeToChop.description": "Создать 500 топоров",
   "tools": "Инструменты",
+  "tornado": "Торнадо",
+  "tornado.building.destroyed.description": "На вашей ферме бушует торнадо — это здание небезопасно! Пожалуйста, дождитесь окончания торнадо.",
+  "tornado.crops.destroyed": "Разрушения от торнадо",
+  "tornado.crops.destroyed.description": "Торнадо уничтожил половину вашего урожая. Пожалуйста, дождитесь окончания торнадо.",
+  "tornado.destroyed.one": "О нет! Торнадо разрушает вашу ферму!",
+  "tornado.destroyed.three": "Некоторые из ваших зданий были повреждены.",
+  "tornado.destroyed.two": "Некоторые из ваших посевов были уничтожены.",
+  "tornado.protected.one": "Вы защитили свою ферму от торнадо!",
+  "tornado.protected.three": "Ни одно из ваших зданий не пострадало.",
+  "tornado.protected.two": "Ни один из ваших посевов не был уничтожен.",
+  "tornado.specialEvent": "Специальное событие - Торнадо",
   "total": "Всего",
   "trader.PoH": "Для этой функции необходимо подтверждение \"личности\". Пожалуйста, сделай быстрое селфи.",
   "trader.buyer.pays": "Покупатель заплатит",
@@ -4750,28 +4773,5 @@
   "worm.grub": "Сочная личинка - идеальный вариант для продвинутых рыболовов.",
   "worm.redWiggler": "Экзотический червь, для самых элитных рыб.",
   "yes": "Да",
-  "yes.please": "Да, пожалуйста",
-  "description.tornadoPinwheel": "Волшебная вертушка, защищающая вас от торнадо! Только для одноразового использования.",
-  "temperateSeason.weatherShop.weather": "Погода",
-  "temperateSeason.weatherShop.buy.description": "Покупайте предметы, чтобы защитить свою ферму от непогоды",
-  "temperateSeason.weatherShop.buy.comingSoon": "Скоро — 1 февраля",
-  "tornado": "Торнадо",
-  "tornado.crops.destroyed": "Разрушение торнадо",
-  "tornado.crops.destroyed.description": "Торнадо уничтожил половину вашего урожая. Пожалуйста, дождитесь окончания торнадо.",
-  "tornado.building.destroyed.description": "На вашей ферме бушует торнадо — это здание небезопасно! Пожалуйста, дождитесь окончания торнадо.",
-  "tornado.protected.one": "Вы защитили свою ферму от торнадо!",
-  "tornado.protected.two": "Ни один из ваших посевов не был уничтожен.",
-  "tornado.protected.three": "Ни одно из ваших зданий не пострадало.",
-  "tornado.destroyed.one": "О нет! Торнадо разрушает вашу ферму!",
-  "tornado.destroyed.two": "Некоторые из ваших посевов были уничтожены.",
-  "tornado.destroyed.three": "Некоторые из ваших зданий были повреждены.",
-  "tornado.specialEvent": "Специальное событие - Tornado",
-  "guide.factionPet.two": "Каждую неделю ваша фракция будет получать очки опыта, которые они должны достичь. Если фракция достигнет цели, цель на следующей неделе будет на 25% больше, чем цель предыдущей недели! Если цель не будет достигнута, количество членов фракции будет увеличено до 1000 раз.",
-  "flowerBedGuide.buySeeds": "Покупайте семена на рынке.",
-  "skill.coinSwindler": "+10% монет при продаже урожая на рынке",
-  "gameOptions.notifications": "Уведомления",
-  "gameOptions.notifications.updating": "Обновление настроек",
-  "gameOptions.notifications.update": "Обновить настройки",
-  "gameOptions.notifications.updated": "Настройки обновлены",
-  "searchHere": "Ищите здесь..."
-}
+  "yes.please": "Да, пожалуйста"
+  }
