[FEAT] Allow relative time functions to handle future

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3380,10 +3380,15 @@
   "time.hour.short": "h",
   "time.day.short": "d",
   "time.milliseconds.ago": "{{time}} {{millisecondORmilliseconds}} ago",
+  "time.milliseconds.in": "in {{time}} {{millisecondORmilliseconds}}",
   "time.seconds.ago": "{{time}} {{secondORseconds}} ago",
+  "time.seconds.in": "in {{time}} {{secondORseconds}}",
   "time.minutes.ago": "{{time}} {{minuteORminutes}} ago ",
+  "time.minutes.in": "in {{time}} {{minuteORminutes}}",
   "time.hours.ago": "{{time}} {{hourORhours}} ago ",
+  "time.hours.in": "in {{time}} {{hourORhours}}",
   "time.days.ago": "{{time}} {{dayORdays}} ago",
+  "time.days.in": "in {{time}} {{dayORdays}}",
   "description.axe": "Used to chop wood",
   "description.pickaxe": "Used to mine stone",
   "description.stone.pickaxe": "Used to mine iron",
@@ -4835,6 +4840,7 @@
   "vip.benefit.bonusDelivery": "Bonus Delivery & Chore Rewards",
   "vip.benefit.reputation": "500 Reputation Points",
   "vip.benefit.competition": "Bonus competition points + more!",
+  "fullMoon.specialEvent": "Special Event - Full Moon",
   "searchHere": "Search here...",
   "sunflowerClock": "Sunflower Clock",
   "days.mon": "Mon.",
@@ -4843,5 +4849,15 @@
   "days.thu": "Thu.",
   "days.fri": "Fri.",
   "days.sat": "Sat.",
-  "days.sun": "Sun."
+  "days.sun": "Sun.",
+  "calendar.events.fullMoon.title": "Full Moon",
+  "calendar.events.fullMoon.description": "A special event where rare creatures and crops appear.",
+  "calendar.events.tsunami.title": "Tsunami",
+  "calendar.events.tsunami.description": "A powerful wave that can cause destruction and damage to properties and infrastructure.",
+  "calendar.events.unknown.title": "Unknown Event",
+  "calendar.events.unknown.description": "A mysterious force approaches... Will it bring fortune or destruction? Only time will tell.",
+  "season.spring": "Spring",
+  "season.summer": "Summer",
+  "season.autumn": "Autumn",
+  "season.winter": "Winter"
 }
