[FEAT] Blend-tastic

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4770,10 +4770,10 @@
   "powerSkills.ready": "Power Skill Ready",
   "powerSkills.nextUse": "Next skill use in:",
   "powerSkills.use": "Use",
-  "powerSkills.unlockedSkills": "Unlocked Skills",
   "powerSkills.confirmationMessage": "Are you sure you want to use {{skillName}}?",
   "powerSkills.cooldownMessage": "You won't be able to use this skill again for {{cooldown}}",
   "powerSkills.useSkill": "Use Skill",
+  "powerSkills.fertiliser": "Fertiliser Skills",
   "marketplace.withdrawComingSoon": "Withdraw date",
   "instantCook.confirmationMessage": "Are you sure you want to finish this recipe now?",
   "instantCook.costMessage": "This will cost you {{gems}} Gems",
