--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4823,7 +4823,8 @@
   "searchHere": "Search here...",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
-  "vip.1Year": "1 Year",
+  "vip.2Years": "2 Years",
+  "vip.3Months.discount": "20% off",
   "vip.purchase.title": "Confirm Purchase",
   "vip.purchase.confirm": "Are you sure you want to purchase {{name}} of VIP access?",
   "vip.benefits": "Benefits",
