[FEAT] VIP Time (#5028)
* [FEAT] VIP Time

* [FEAT] Event polish

* Show VIP Modal

* Rebase

* [FIX] TSC

* Fix test

* Clarify vip expires

* Finalise prices

* Finalise prices

* Fix TSC

* 2 Year tests

* [FEAT] Formatting

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3206,9 +3206,10 @@
   "season.vip.access": "Season VIP Access",
   "season.vip.claim": "Claim your monthly seasonal airdrop.",
   "season.vip.description": "Dominate the season with perks, discounts, bonus tickets, airdrops and more!",
-  "season.vip.purchase": "Purchase VIP Items",
+  "season.vip.purchase": "Purchase VIP Access",
   "season.mystery.gift": "Mystery Gift",
   "season.xp.boost": "10% XP boost",
+
   "season.lifetime.farmer": "Lifetime Farmer",
   "season.free.with.lifetime": "Free with Lifetime Farmer",
   "season.bullRun.bonus": "10% less feed to feed animals",
@@ -4819,5 +4820,20 @@
   "tsunami.destroyed.two": "Some of your crops were destroyed.",
   "tsunami.destroyed.three": "Some of your buildings were damaged.",
   "tsunami.specialEvent": "Special Event - Tsunami",
-  "searchHere": "Search here..."
+  "searchHere": "Search here...",
+  "vip.1Month": "1 Month",
+  "vip.3Months": "3 Months",
+  "vip.2Years": "2 Years",
+  "vip.3Months.discount": "20% off",
+  "vip.purchase.title": "Confirm Purchase",
+  "vip.purchase.confirm": "Are you sure you want to purchase {{name}} of VIP access?",
+  "vip.benefits": "Benefits",
+  "vip.oneYear.warning": "You already have 1 year VIP access.",
+  "vip.access": "VIP Access",
+  "vip.benefit.airdrop": "Monthly airdrop",
+  "vip.benefit.expBoost": "10% EXP Boost",
+  "vip.benefit.stellaDiscounts": "Stella SFL discounts",
+  "vip.benefit.bonusDelivery": "Bonus Delivery & Chore Rewards",
+  "vip.benefit.reputation": "500 Reputation Points",
+  "vip.benefit.competition": "Bonus competition points + more!"
 }
