Add Reason for power skills

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4774,6 +4774,16 @@
   "powerSkills.cooldownMessage": "You won't be able to use this skill again for {{cooldown}}",
   "powerSkills.useSkill": "Use Skill",
   "powerSkills.fertiliser": "Fertiliser Skills",
+  "powerSkills.reason.insufficientFertiliser": "Insufficient {{fertiliser}}",
+  "powerSkills.reason.allPlotsFertilised": "All plots are already fertilised",
+  "powerSkills.reason.allFruitPatchesFertilised": "All fruit patches are already fertilised",
+  "powerSkills.reason.noCropsGrowing": "No crops are growing",
+  "powerSkills.reason.noTreesRecovering": "No trees are recovering",
+  "powerSkills.reason.noGreenhouseProduceGrowing": "No greenhouse produce is growing",
+  "powerSkills.reason.noBuildingsAreCooking": "No buildings are cooking",
+  "powerSkills.reason.noFlowersGrowing": "No flowers are growing in flower beds",
+  "powerSkills.reason.noOilreservesRefilling": "No oil reserves are refilling",
+  "powerSkills.reason.animalsSickReadyAsleep": "Your animals are sick, ready or asleep",
   "marketplace.withdrawComingSoon": "Withdraw date",
   "instantCook.confirmationMessage": "Are you sure you want to finish this recipe now?",
   "instantCook.costMessage": "This will cost you {{gems}} Gems",
