--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1695,7 +1695,12 @@
   "gameOptions.title": "Game Options",
   "gameOptions.farmId": "Farm ID #{{farmId}}",
   "gameOptions.logout": "Logout",
+  "gameOptions.notifications": "Notifications",
   "gameOptions.confirmLogout": "Are you sure you want to Logout?",
+  "gameOptions.notifications.updating": "Updating settings",
+  "gameOptions.notifications.update": "Update settings",
+  "gameOptions.notifications.updated": "Settings updated",
+  "gameOptions.notifications.notSupported": "Not supported",
   "gameOptions.developerOptions": "Developer Options",
   "gameOptions.developerOptions.timeMachine": "Time Machine",
   "gameOptions.blockchainSettings": "Blockchain Settings",
