[FEAT] Fix terms

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4827,7 +4827,6 @@
   "tsunami.destroyed.two": "Some of your crops were destroyed.",
   "tsunami.destroyed.three": "Some of your buildings were damaged.",
   "tsunami.specialEvent": "Special Event - Tsunami",
-  "greatFreeze.title": "Great Freeze",
   "greatFreeze.crops.frozen": "Frozen by the great freeze",
   "greatFreeze.description": "A great freeze is freezing your farm!",
   "greatFreeze.specialEvent": "Special Event - Great Freeze",
@@ -4866,6 +4865,8 @@
   "calendar.events.fullMoon.description": "A special event where rare creatures and crops appear.",
   "calendar.events.tsunami.title": "Tsunami",
   "calendar.events.tsunami.description": "A powerful wave that can cause destruction and damage to properties and infrastructure.",
+  "calendar.events.greatFreeze.title": "Great Freeze",
+  "calendar.events.greatFreeze.description": "A devastating cold snap that freezes crops.",
   "calendar.events.unknown.title": "Unknown Event",
   "calendar.events.unknown.description": "A mysterious force approaches... Will it bring fortune or destruction? Only time will tell.",
   "season.spring": "Spring",
