--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4812,6 +4812,7 @@
   "temperateSeason.possibleEvents": "Possible Events",
   "description.tornadoPinwheel": "A magical pinwheel that protects you from the tornado! One-use only.",
   "description.mangrove": "A mangrove that protects you from the tsunami! One-use only.",
+  "description.thermalStone": "A thermal stone that protects you from the great freeze!",
   "temperateSeason.weatherShop.weather": "Weather",
   "temperateSeason.weatherShop.buy.description": "Buy items to protect your farm from the weather",
   "temperateSeason.weatherShop.buy.comingSoon": "Coming soon - February 1st",
@@ -4837,6 +4838,13 @@
   "tsunami.destroyed.two": "Some of your crops were destroyed.",
   "tsunami.destroyed.three": "Some of your buildings were damaged.",
   "tsunami.specialEvent": "Special Event - Tsunami",
+  "greatFreeze.crops.frozen": "Frozen by the great freeze",
+  "greatFreeze.description": "A great freeze is freezing your farm!",
+  "greatFreeze.specialEvent": "Special Event - Great Freeze",
+  "greatFreeze.protected.one": "You protected your farm from the great freeze!",
+  "greatFreeze.protected.two": "None of your crops were frozen.",
+  "greatFreeze.destroyed.one": "Oh no! A great freeze is freezing your farm!",
+  "greatFreeze.destroyed.two": "Some of your crops were frozen.",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
@@ -4868,6 +4876,8 @@
   "calendar.events.fullMoon.description": "A special event where rare creatures and crops appear.",
   "calendar.events.tsunami.title": "Tsunami",
   "calendar.events.tsunami.description": "A powerful wave that can cause destruction and damage to properties and infrastructure.",
+  "calendar.events.greatFreeze.title": "Great Freeze",
+  "calendar.events.greatFreeze.description": "A devastating cold snap that freezes crops.",
   "calendar.events.unknown.title": "Unknown Event",
   "calendar.events.unknown.description": "A mysterious force approaches... Will it bring fortune or destruction? Only time will tell.",
   "season.spring": "Spring",
