--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4891,5 +4891,19 @@
   "description.pepper": "Hmm, looks spicy!",
   "description.onion": "A pungent veggie.",
   "description.turnip": "A cool-season veggie.",
-  "description.artichoke": "A hearty veggie."
+  "description.artichoke": "A hearty veggie.",
+  "cropGuide.payAttentionToSeason": "Pay attention to the season. Certain produce can only be planted during a specific time.",
+  "cropGuide.earnCoins": "To earn coins, you'll need to plant and harvest!",
+  "cropGuide.crops": "Crops",
+  "cropGuide.fruits": "Fruits",
+  "cropGuide.fruitPatchRequired": "Fruit patch required",
+  "cropGuide.greenhouse": "Greenhouse",
+  "cropGuide.greenhouseRequired": "Greenhouse required",
+  "cropGuide.flowerbedRequired": "Flowerbed required",
+  "cropGuide.discoverExoticsDuringSpecialEvents": "Discover exotics during special events & at the potion house.",
+  "cropGuide.exotics": "Exotics",
+  "cropGuide.flower.description": "Plant flowers to discover over 50+ unique varieties.",
+  "cropGuide.flower": "Flowers",
+  "cropGuide.fruit.description": "Fruit can only be planted in fruit patches. Each plant, can be harvested multiple times.",
+  "cropGuide.otherProduce": "Other Produce"
 }
