--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4817,6 +4817,7 @@
   "description.tornadoPinwheel": "A magical pinwheel that protects you from the tornado! One-use only.",
   "description.mangrove": "A mangrove that protects you from the tsunami! One-use only.",
   "description.thermalStone": "A thermal stone that protects you from the great freeze!",
+  "description.protectivePesticide": "A pesticide that protects your crops from the insect plague!",
   "temperateSeason.weatherShop.weather": "Weather",
   "temperateSeason.weatherShop.buy.description": "Buy items to protect your farm from the weather",
   "temperateSeason.weatherShop.buy.comingSoon": "Coming soon - February 1st",
@@ -4856,6 +4857,12 @@
   "bountifulHarvest.noticeboard.one": "Today is a day of Bountiful Harvest!",
   "bountifulHarvest.noticeboard.two": "Your crops, fruit and greenhouse produce will yield an extra +1 today.",
   "bountifulHarvest.noticeboard.three": "Enjoy the abundant rewards and make the most of this prosperous time.",
+  "insectPlague.specialEvent": "Special Event - Insect Plague",
+  "insectPlague.protected.one": "You protected your crops from the insect plague!",
+  "insectPlague.protected.two": "None of your crops have been affected.",
+  "insectPlague.destroyed.one": "Oh no! Insect plague is infesting your crops!",
+  "insectPlague.destroyed.two": "The insect plague has devastated your crops, reducing all harvests by half",
+  "insectPlague.crops.affected": "Insect plague affected, crops reduced by 50%",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
@@ -4895,6 +4902,12 @@
   "calendar.events.unknown.description": "A mysterious force approaches... Will it bring fortune or destruction? Only time will tell.",
   "calendar.events.bountifulHarvest.title": "Bountiful Harvest",
   "calendar.events.bountifulHarvest.description": "A special event where crops, fruit and greenhouse produce yield an extra +1 more than usual.",
+  "calendar.events.insectPlague.title": "Insect Plague",
+  "calendar.events.insectPlague.description": "A plague of insects that can devastate crops, reducing all harvests by half.",
+  "calendar.events.insectPlague.prevention": "Protective Pesticide",
+  "calendar.events.tornado.prevention": "Tornado Pinwheel",
+  "calendar.events.tsunami.prevention": "Mangrove",
+  "calendar.events.greatFreeze.prevention": "Thermal Stone",
   "season.spring": "Spring",
   "season.summer": "Summer",
   "season.autumn": "Autumn",
