--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -214,12 +214,15 @@
   "description.sir.goldensnout.boost.aoe": "Affects plots around (4x4)",
   "description.maximus.boost": "+1 Eggplant",
   "description.basic.scarecrow.boost": "-20% Growth Time",
+  "description.basic.scarecrow.boost.skill": "-30% Growth Time",
   "description.basic.scarecrow.boost.aoe": "Area of Effect (3x3) below",
   "description.basic.scarecrow.boost.aoe.skill": "Area of Effect (7x7) below",
   "description.scary.mike.boost": "+0.2 Medium Crops",
+  "description.scary.mike.boost.skill": "+0.3 Medium Crops",
   "description.scary.mike.boost.aoe": "Area of Effect (3x3) below",
   "description.scary.mike.boost.aoe.skill": "Area of Effect (7x7) below",
   "description.laurie.chuckle.crow.boost": "+0.2 Advanced Crops",
+  "description.laurie.chuckle.crow.boost.skill": "+0.3 Advanced Crops",
   "description.laurie.chuckle.crow.boost.aoe": "Area of Effect (3x3) below",
   "description.laurie.chuckle.crow.boost.aoe.skill": "Area of Effect (7x7) below",
   "description.bale.boost": "+0.1 Egg",
