Add buffed scarecrow skills description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3907,14 +3907,14 @@
   "skill.strongRoots": "-10% Advanced crop growth time",
   "skill.coinSwindler": "+10% coins when selling crops at the Market",
   "skill.goldenSunflower": "1/700 chance for +0.35 gold when harvesting sunflowers (plots only)",
-  "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area",
-  "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area",
+  "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area; Additional -10% basic crop growth time",
+  "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area; Additional +0.1 medium crop yield",
   "skill.instantGrowth": "Grants the ability to instantly harvest all currently growing crops",
   "skill.acreFarm.buff": "+1 Advanced crop yield",
   "skill.acreFarm.debuff": "-0.5 Basic and Medium crop yield",
   "skill.hectareFarm.buff": "+1 Basic and Medium crop yield",
   "skill.hectareFarm.debuff": "-0.5 Advanced crop yield",
-  "skill.lauriesGains": "Increases Laurie the Chuckle Crow's area of effect (AOE) to a 7x7 area",
+  "skill.lauriesGains": "Increases Laurie the Chuckle Crow's area of effect (AOE) to a 7x7 area; Additional +0.1 advanced crop yield",
   "skill.fruitfulFumble": "+0.1 fruit yield",
   "skill.fruityHeaven": "-10% fruit seeds cost",
   "skill.fruityProfit": "+50% coins from Tango's deliveries",
