--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4852,6 +4852,10 @@
   "doubleDelivery.specialEvent": "Special Event - Double Delivery",
   "doubleDelivery.one": "Today is a special day! Deliveries are worth double rewards.",
   "doubleDelivery.two": "Only the first delivery of the day from each bumpkin or goblin will receive double rewards.",
+  "bountifulHarvest.specialEvent": "Special Event - Bountiful Harvest",
+  "bountifulHarvest.noticeboard.one": "Today is a day of Bountiful Harvest!",
+  "bountifulHarvest.noticeboard.two": "Your crops, fruit and greenhouse produce will yield an extra +1 today.",
+  "bountifulHarvest.noticeboard.three": "Enjoy the abundant rewards and make the most of this prosperous time.",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
