--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4863,6 +4863,11 @@
   "insectPlague.destroyed.one": "Oh no! Insect plague is infesting your crops!",
   "insectPlague.destroyed.two": "The insect plague has devastated your crops, reducing all harvests by half",
   "insectPlague.crops.affected": "Insect plague affected, crops reduced by 50%",
+  "sunshower.title": "Sunshower",
+  "sunshower.description": "A rare weather phenomenon where the sun shines while it rains, bringing good fortune to your crops.",
+  "sunshower.info.one": "Your crops grow 2x faster!",
+  "sunshower.tooltip": "Sunshower blessed - 2x crop speed.",
+  "sunshower.specialEvent": "Special Event - Sunshower",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
