--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4881,6 +4881,8 @@
   "calendar.events.tsunami.title": "Tsunami",
   "calendar.events.tsunami.description": "A powerful wave that can cause destruction and damage to properties and infrastructure.",
   "calendar.events.greatFreeze.title": "Great Freeze",
+  "calendar.events.doubleDelivery.title": "Double Delivery",
+  "calendar.events.doubleDelivery.description": "A special event where you can earn double rewards from deliveries.",
   "calendar.events.greatFreeze.description": "A devastating cold snap that freezes crops.",
   "calendar.events.unknown.title": "Unknown Event",
   "calendar.events.unknown.description": "A mysterious force approaches... Will it bring fortune or destruction? Only time will tell.",
