Add Modal for Double Delivery

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4849,6 +4849,9 @@
   "greatFreeze.protected.two": "None of your crops were frozen.",
   "greatFreeze.destroyed.one": "Oh no! A great freeze is freezing your farm!",
   "greatFreeze.destroyed.two": "Some of your crops were frozen.",
+  "doubleDelivery.specialEvent": "Special Event - Double Delivery",
+  "doubleDelivery.one": "Today is a special day! Deliveries are worth double rewards.",
+  "doubleDelivery.two": "Only the first delivery of the day from each bumpkin or goblin will receive double rewards.",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
