--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4893,6 +4893,8 @@
   "calendar.events.greatFreeze.description": "A devastating cold snap that freezes crops.",
   "calendar.events.unknown.title": "Unknown Event",
   "calendar.events.unknown.description": "A mysterious force approaches... Will it bring fortune or destruction? Only time will tell.",
+  "calendar.events.bountifulHarvest.title": "Bountiful Harvest",
+  "calendar.events.bountifulHarvest.description": "A special event where crops, fruit and greenhouse produce yield an extra +1 more than usual.",
   "season.spring": "Spring",
   "season.summer": "Summer",
   "season.autumn": "Autumn",
