--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4885,9 +4885,9 @@
   "season.autumn": "Autumn",
   "season.winter": "Winter",
   "description.rhubarb": "A tart and tangy vegetable!",
-  "description.Zucchini": "Great for salads and stir-fries.",
+  "description.zucchini": "Great for salads and stir-fries.",
   "description.yam": "A starchy root vegetable ",
-  "description.Broccoli": "A cruciferous veggie.",
+  "description.broccoli": "A cruciferous veggie.",
   "description.pepper": "Hmm, looks spicy!",
   "description.onion": "A pungent veggie.",
   "description.turnip": "A cool-season veggie.",
