[FEAT] Double Delivery Calendar Migration (#5070)
* [FEAT] Double Delivery Calendar Migration

* Add future code for Double Delivery

* Add filter for double delivery to show the next double delivery on the calendar

* Revert "Add filter for double delivery to show the next double delivery on the calendar"

This reverts commit b5657eced4f3701154fb2ffddfe756f32a4df330.

* use TranslationKeys as type for title and description

* Add Modal for Double Delivery

* Refactor seasonal event handling to use dynamic keys from SEASONAL_EVENTS

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4849,6 +4849,9 @@
   "greatFreeze.protected.two": "None of your crops were frozen.",
   "greatFreeze.destroyed.one": "Oh no! A great freeze is freezing your farm!",
   "greatFreeze.destroyed.two": "Some of your crops were frozen.",
+  "doubleDelivery.specialEvent": "Special Event - Double Delivery",
+  "doubleDelivery.one": "Today is a special day! Deliveries are worth double rewards.",
+  "doubleDelivery.two": "Only the first delivery of the day from each bumpkin or goblin will receive double rewards.",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
@@ -4881,6 +4884,8 @@
   "calendar.events.tsunami.title": "Tsunami",
   "calendar.events.tsunami.description": "A powerful wave that can cause destruction and damage to properties and infrastructure.",
   "calendar.events.greatFreeze.title": "Great Freeze",
+  "calendar.events.doubleDelivery.title": "Double Delivery",
+  "calendar.events.doubleDelivery.description": "A special event where you can earn double rewards from deliveries.",
   "calendar.events.greatFreeze.description": "A devastating cold snap that freezes crops.",
   "calendar.events.unknown.title": "Unknown Event",
   "calendar.events.unknown.description": "A mysterious force approaches... Will it bring fortune or destruction? Only time will tell.",
