--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4865,8 +4865,8 @@
   "insectPlague.crops.affected": "Insect plague affected, crops reduced by 50%",
   "calendar.events.sunshower.title": "Sunshower",
   "calendar.events.sunshower.description": "A rare weather phenomenon where the sun shines while it rains, bringing good fortune to your crops.",
-  "calendar.events.sunshower.info.one": "Your crops grow 2x faster!",
-  "calendar.events.sunshower.tooltip": "Sunshower blessed - 2x crop speed.",
+  "sunshower.info.one": "Your crops grow 2x faster!",
+  "sunshower.tooltip": "Sunshower blessed - 2x crop speed.",
   "sunshower.specialEvent": "Special Event - Sunshower",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
