[FEAT] Update to be fruit

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4954,10 +4954,9 @@
   "crops.fruit": "Fruit",
   "crops.flower": "Flower",
   "fullMoon.one": "All eggplants have grown overnight.",
-  "fullMoon.two": "Betty has a supply of Duskberry, Grimroot, and Lunacress seeds.",
+  "fullMoon.two": "Betty has a supply of Duskberry, Lunara, and Celestine seeds.",
   "fullMoon.three": "The waters are filled with strange creatures.",
-
   "description.duskberry": "A rare berry that grows in the dark.",
-  "description.grimroot": "A mysterious root that grows in the darkest of places.",
-  "description.lunacress": "A rare plant that grows in the darkest of places."
+  "description.lunara": "A rare berry that grows in the dark.",
+  "description.celestine": "A rare berry that grows in the dark."
 }
