[FEAT] Add Volcano Gnome

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4557,6 +4557,7 @@
   "description.snowman": "A special snowman that for some reason never melts!?",
   "description.festiveToyTrain": "A special snowman that for some reason never melts!?",
   "description.golden.cow.boost": "Feed cows for free!",
+  "description.volcanoGnome": "A mineral obsessed gnome that can survive the harshest of conditions.",
 
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
