--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4939,6 +4939,9 @@
   "cropGuide.flower": "Flowers",
   "cropGuide.fruit.description": "Fruit can only be planted in fruit patches. Each plant, can be harvested multiple times.",
   "cropGuide.otherProduce": "Other Produce",
+  "cropGuide.cropMachine.seeds": "Crop Machine Seeds",
+  "cropGuide.cantPlantSeeds": "Seeds can't be planted",
+  "cropGuide.onlyInCropMachine": "Seeds can only be planted in Crop Machine",
   "spring.seeds": "Spring Seeds",
   "summer.seeds": "Summer Seeds",
   "autumn.seeds": "Autumn Seeds",
