[FEAT] Full Moon (#5066)
* [FEAT] Full Moon

* [FEAT] Grimroot

* [FIX] Sell crops

* [FEAT] Update to be fruit

* [FEAT] Update

* fix-tsc

* fix

* fix sizing

* fix sizing

* [FIX] IDS

* fix tsc

---------

Co-authored-by: Elias <101262042+eliasSFL@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4952,5 +4952,11 @@
   "crops.overnightCrop": "Overnight Crop",
   "crops.greenhouse": "Greenhouse",
   "crops.fruit": "Fruit",
-  "crops.flower": "Flower"
+  "crops.flower": "Flower",
+  "fullMoon.one": "All eggplants have grown overnight.",
+  "fullMoon.two": "Betty has a supply of Duskberry, Lunara, and Celestine seeds.",
+  "fullMoon.three": "The waters are filled with strange creatures.",
+  "description.duskberry": "A rare berry that grows in the dark.",
+  "description.lunara": "A rare berry that grows in the dark.",
+  "description.celestine": "A rare berry that grows in the dark."
 }
