--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2261,10 +2261,12 @@
   "islandupgrade.exploring": "Exploring",
   "islandupgrade.welcomePetalParadise": "Welcome to Petal Paradise!",
   "islandupgrade.welcomeDesertIsland": "Welcome to the Desert!",
+  "islandupgrade.welcomeVolcanoIsland": "Welcome to Volcano Island!",
   "islandupgrade.itemsReturned": "Your items have been safely returned to your inventory.",
   "islandupgrade.notReadyExpandMore": "You are not ready. Expand {{remainingExpansions}} more times",
   "islandupgrade.exoticResourcesDescription": "This area of Sunflower Land is known for its exotic resources. Expand your land to discover fruit, flowers, bee hives & rare minerals!",
   "islandupgrade.desertResourcesDescription": "The harsh desert environment requires new technology to survive. Expand your land to discover new buildings and what's inside!",
+  "islandupgrade.volcanoResourcesDescription": "A dangerous volcanic terrain with precious minerals and rare resources waiting to be discovered. Expand your land to uncover its secrets!",
   "islandupgrade.requiredIsland": "Unlocks at {{islandType}}",
   "islandupgrade.otherIsland": "{{island}} Island",
   "landscape.intro.one": "Design your dream island!",
@@ -3695,6 +3697,7 @@
   "description.flag.malaysia": "Malaysian flag",
   "description.flag.colombia": "Colombian flag",
   "description.manor": "A place to rest your head",
+  "description.mansion": "A place to rest your head",
   "description.sunstone.rock": "A mineable rock to collect sunstone",
   "description.solar.flare.banner": "A banner for Solar Flare season",
   "description.dawn.breaker.banner": "A banner for Dawn Breaker season",
