Set correct harvest number for Full Moon Berries

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1747,7 +1747,8 @@
   "farm.banned": "This farm is banned",
   "gobSwarm": "Goblin Swarm!",
   "granting.wish": "Granting your wish",
-  "harvest.number": "{{minHarvest}}-{{maxHarvest}} harvests",
+  "harvest.numbers": "{{minHarvest}}-{{maxHarvest}} harvests",
+  "harvest.number": "{{noOfHarvests}} harvests",
   "level.number": "Level {{level}}",
   "new.delivery.in": "New deliveries: {{timeLeft}}",
   "new.delivery.levelup": "Level up to unlock more deliveries.",
