[FEAT] Lava Pit

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -949,6 +949,7 @@
   "description.stone.rock": "A mineable rock to collect stone",
   "description.crimstone.rock": "A mineable rock to collect crimstone",
   "description.oil.reserve": "A source of oil",
+  "description.lava.pit": "A source of obsidian",
   "description.flower.bed": "An empty plot to plant flowers on",
   "description.tree": "A choppable tree to collect wood",
   "description.fruit.patch": "An empty plot to plant fruit on",
