[FEAT] Show Crop Machine and Off Season Seeds (#5080)
* Allow seeds to be bought off season

* Show Crop Machine Seeds and Off season seeds

* Update Crop Machine Valid Seeds

* Add additional text if crop can only be planted in crop machine

* remove test

* Show medium time in crop guide if growth time is more than 24h

* Add translations

* Full Moon Seeds

* Set correct harvest number for Full Moon Berries

* Allow Full Moon Fruits to be planted at any time

* Hide Restock button for Full Moon Berries

* Pass down cropMachineSeeds for validation checks

* Remove unused const

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1748,7 +1748,8 @@
   "farm.banned": "This farm is banned",
   "gobSwarm": "Goblin Swarm!",
   "granting.wish": "Granting your wish",
-  "harvest.number": "{{minHarvest}}-{{maxHarvest}} harvests",
+  "harvest.numbers": "{{minHarvest}}-{{maxHarvest}} harvests",
+  "harvest.number": "{{noOfHarvests}} harvests",
   "level.number": "Level {{level}}",
   "new.delivery.in": "New deliveries: {{timeLeft}}",
   "new.delivery.levelup": "Level up to unlock more deliveries.",
@@ -4940,6 +4941,9 @@
   "cropGuide.flower": "Flowers",
   "cropGuide.fruit.description": "Fruit can only be planted in fruit patches. Each plant, can be harvested multiple times.",
   "cropGuide.otherProduce": "Other Produce",
+  "cropGuide.cropMachine.seeds": "Crop Machine Seeds",
+  "cropGuide.cantPlantSeeds": "Seeds can't be planted",
+  "cropGuide.onlyInCropMachine": "Seeds can only be planted in Crop Machine",
   "spring.seeds": "Spring Seeds",
   "summer.seeds": "Summer Seeds",
   "autumn.seeds": "Autumn Seeds",
