--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4561,7 +4561,7 @@
   "description.festiveToyTrain": "A special snowman that for some reason never melts!?",
   "description.golden.cow.boost": "Feed cows for free!",
   "description.volcanoGnome": "A mineral obsessed gnome that can survive the harshest of conditions.",
-
+  "description.volcanoGnome.boost": "+0.1 Minerals",
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
