[FEAT] Initial Volcano Island Updates (#5081)
* [FEAT] Update farmUpdated to handle volcano island

* [FEAT] Add Volcano Gnome

* [CHORE] Update sharp

* [FEAT] Initial setup for upgrade

* [FEAT] Add dummy expansions

* [FIX] comments

* [CHORE] Remove unused

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2261,10 +2261,12 @@
   "islandupgrade.exploring": "Exploring",
   "islandupgrade.welcomePetalParadise": "Welcome to Petal Paradise!",
   "islandupgrade.welcomeDesertIsland": "Welcome to the Desert!",
+  "islandupgrade.welcomeVolcanoIsland": "Welcome to Volcano Island!",
   "islandupgrade.itemsReturned": "Your items have been safely returned to your inventory.",
   "islandupgrade.notReadyExpandMore": "You are not ready. Expand {{remainingExpansions}} more times",
   "islandupgrade.exoticResourcesDescription": "This area of Sunflower Land is known for its exotic resources. Expand your land to discover fruit, flowers, bee hives & rare minerals!",
   "islandupgrade.desertResourcesDescription": "The harsh desert environment requires new technology to survive. Expand your land to discover new buildings and what's inside!",
+  "islandupgrade.volcanoResourcesDescription": "A dangerous volcanic terrain with precious minerals and rare resources waiting to be discovered. Expand your land to uncover its secrets!",
   "islandupgrade.requiredIsland": "Unlocks at {{islandType}}",
   "islandupgrade.otherIsland": "{{island}} Island",
   "landscape.intro.one": "Design your dream island!",
@@ -3695,6 +3697,7 @@
   "description.flag.malaysia": "Malaysian flag",
   "description.flag.colombia": "Colombian flag",
   "description.manor": "A place to rest your head",
+  "description.mansion": "A place to rest your head",
   "description.sunstone.rock": "A mineable rock to collect sunstone",
   "description.solar.flare.banner": "A banner for Solar Flare season",
   "description.dawn.breaker.banner": "A banner for Dawn Breaker season",
@@ -4557,7 +4560,8 @@
   "description.snowman": "A special snowman that for some reason never melts!?",
   "description.festiveToyTrain": "A special snowman that for some reason never melts!?",
   "description.golden.cow.boost": "Feed cows for free!",
-
+  "description.volcanoGnome": "A mineral obsessed gnome that can survive the harshest of conditions.",
+  "description.volcanoGnome.boost": "+0.1 Minerals",
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
