--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1726,7 +1726,7 @@
   "gameOptions.generalSettings.disableQuickSelect": "Disable QuickSelect",
   "gameOptions.generalSettings.enableQuickSelect": "Enable QuickSelect",
   "gameOptions.generalSettings.share": "Share",
-  "gameOptions.generalSettings.appearance&behaviour": "Appearance & Behaviour",
+  "gameOptions.generalSettings.preferences": "Preferences",
   "gameOptions.plazaSettings": "Plaza Settings",
   "gameOptions.plazaSettings.title.mutedPlayers": "Muted Players",
   "gameOptions.plazaSettings.title.keybinds": "Keybinds",
